# CryptiorKit

./: .gitignore  CMakeLists.txt  README.md
lib/encryptor/: encryptor.cpp  encryptor.h
src/: main.cpp
